<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleDeviceList"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="Device List"
        android:textSize="20dp"
        android:textColor="@color/azure"
        android:gravity="center"/>

    <TextView
        android:id="@+id/titleNewDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:paddingLeft="5dp"
        android:text="@string/title_other_devices"
        android:textColor="@color/white"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/newDevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true"></ListView>

    <TextView
        android:id="@+id/titlePairedDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:paddingLeft="5dp"
        android:text="@string/title_paired_devices"
        android:textColor="#fff"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/pairedDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true"></ListView>

    <Button
        android:id="@+id/buttonScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:textColor="@color/white"
        android:text="@string/button_scan"/>


</LinearLayout>