<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/yellow"
    tools:context="com.example.nocomment.snapchat.Login">


    <LinearLayout

        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:id="@+id/linearLayout2"
        android:layout_gravity="center"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/prompt_username"
            android:id="@+id/username"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/prompt_password" />


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_login"
        android:background="@color/pink"
        android:id="@+id/loginButton"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2"
        android:layout_marginTop="33dp"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_alignEnd="@+id/linearLayout2" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/signupMessage"
        android:textSize="40dp"
        android:layout_below="@+id/loginButton"
        />

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/ghost"
        android:nestedScrollingEnabled="true"
        android:id="@+id/imageView"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/signupMessage"
        android:layout_toEndOf="@+id/signupMessage" />

</RelativeLayout>
